--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 # Ignore Byebug command history file.
 .byebug_history
 
+# Ignore ArchivesSpace configurations in JS settings file
+*application_settings.js
+
+# Ignore DS_Store
+*.DS_Store
