--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,10 @@
 default: &default
   adapter: mysql2
   encoding: utf8
+  host: db
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: 
 
 development:
   <<: *default
