--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0' && rake db:create && rake db:migrate"
+    command: /usr/bin/entrypoint.sh
     volumes:
       - .:/dm_log
     ports:
@@ -16,4 +16,4 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_USER=root
+      MYSQL_ROOT_PASSWORD: example
