--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,12 @@ services:
   db:
     image: mysql:8.0.13
     command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - dm_log_db:/var/lib/mysql
     ports:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: example
+
+volumes:
+  dm_log_db:
