--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,8 +8,6 @@ services:
       - dm_log_db:/var/lib/mysql
     ports:
       - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: example
     env_file:
       - ./.env.dev
   web:
@@ -26,5 +24,5 @@ services:
 
 volumes:
   dm_log_db:
-    # driver: vsphere
+    driver: vsphere
 
