--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     depends_on:
       - db
   db:
+    platform: linux/x86_64
     image: mysql:8.0.13
     command: --default-authentication-plugin=mysql_native_password
     volumes:
