--- a/docker-compose.m1.yml
+++ b/docker-compose.m1.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   web:
+    platform: linux/amd64
     build: .
     command: /usr/bin/entrypoint.sh
     volumes:
@@ -12,7 +13,6 @@ services:
     depends_on:
       - db
   db:
-    platform: linux/x86_64
     image: mysql:8.0.29-oracle
     command: --default-authentication-plugin=mysql_native_password
     volumes:
